// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen render screen with redux 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 45,
          },
          Object {
            "height": 40,
            "width": "85%",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0071e9",
              "borderRadius": 5,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 16,
                "fontWeight": "normal",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.GENERICS.SIGN_IN" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0-DEV
  </Text>
</View>
`;

exports[`LoginScreen renders build environment next to version # if ENV is dev 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <SelectCountryCodeModal
      onSignOut={[Function]}
      onSubmitCN={[Function]}
      onSubmitMX={[Function]}
    />
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0-DEV
  </Text>
</View>
`;

exports[`LoginScreen renders build environment next to version # if ENV is stage 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <SelectCountryCodeModal
      onSignOut={[Function]}
      onSubmitCN={[Function]}
      onSubmitMX={[Function]}
    />
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0-STAGE
  </Text>
</View>
`;

exports[`LoginScreen renders pure version number if build environment is production 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <SelectCountryCodeModal
      onSignOut={[Function]}
      onSubmitCN={[Function]}
      onSubmitMX={[Function]}
    />
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0
  </Text>
</View>
`;

exports[`LoginScreen renders the EnterClubNbr modal when a MX HO user logs in 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <SelectCountryCodeModal
      onSignOut={[Function]}
      onSubmitCN={[Function]}
      onSubmitMX={[Function]}
    />
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0-DEV
  </Text>
</View>
`;

exports[`LoginScreen renders the Select CountryCode modal when a user logs in as US HomeOffice 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Form"
    onClose={[Function]}
  >
    <SelectCountryCodeModal
      onSignOut={[Function]}
      onSubmitCN={[Function]}
      onSubmitMX={[Function]}
    />
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0-DEV
  </Text>
</View>
`;

exports[`LoginScreen renders the snapshot test appropriately 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <SelectCountryCodeModal
      onSignOut={[Function]}
      onSubmitCN={[Function]}
      onSubmitMX={[Function]}
    />
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0-DEV
  </Text>
</View>
`;

exports[`Tests login screen functions SelectCountryCodeModal 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "height": 120,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 45,
          },
          Object {
            "height": 30,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="closeButton"
        >
          <mockMaterialCommunityIcons
            color="#9e9e9e"
            name="close"
            size={16}
          />
        </View>
      </View>
    </View>
  </View>
  <Text
    style={
      Object {
        "paddingBottom": 20,
      }
    }
  >
    Please select a country to sign into
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "height": 45,
            },
            Object {
              "paddingHorizontal": 12,
              "width": "50%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffffff",
                "borderColor": "#0071e9",
                "borderRadius": 5,
                "borderWidth": 1,
                "flex": 1,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="mxButton"
          >
            <Text
              style={
                Object {
                  "color": "#0071e9",
                  "fontFamily": "Roboto-Medium",
                  "fontSize": 16,
                  "fontWeight": "normal",
                  "textAlign": undefined,
                }
              }
            >
              MX
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "height": 45,
            },
            Object {
              "paddingHorizontal": 12,
              "width": "50%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#0071e9",
                "borderRadius": 5,
                "elevation": 1,
                "flex": 1,
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="cnButton"
          >
            <Text
              style={
                Object {
                  "color": "#ffffffff",
                  "fontFamily": "Roboto-Medium",
                  "fontSize": 16,
                  "fontWeight": "normal",
                  "textAlign": undefined,
                }
              }
            >
              CN
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
